[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Leaderboard.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.32549, 0.407843, 0.32549, 0.921569 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0862745, 0.384314, 0.792157, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Leaderboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.156863, 0.0470588, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 340.0
margin_top = 110.0
margin_right = 940.0
margin_bottom = 610.0
rect_min_size = Vector2( 600, 500 )
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 560.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "Leaderboard"
align = 1

[node name="ScoreContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 63.0
margin_right = 560.0
margin_bottom = 367.0
rect_min_size = Vector2( 0, 304 )
custom_constants/separation = 10

[node name="BackButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 387.0
margin_right = 560.0
margin_bottom = 427.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Back to Menu"

[node name="LoadingLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
visible = false
margin_top = 452.0
margin_right = 560.0
margin_bottom = 476.0
custom_fonts/font = SubResource( 3 )
text = "Loading scores..."
align = 1
